lagt till footer och fått den responsiv

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet" />
+
     <link rel="stylesheet" href="mobile.css" />
     <link rel="stylesheet" href="desktop.css" />
     <title>Emojipedia😍</title>
@@ -44,7 +47,7 @@
         </nav>
         <div class="navbar-desktop">
           <p>🛍️</p>
-          <p>En</p>
+          <p class="lang-opt">En</p>
         </div>
       </header>
     </div>
@@ -104,11 +107,13 @@
             🌱Earth Day
           </p>
         </div>
+
         <div class="ramadan">
           <p class="bg-white w-fit p-05 ml-1 size-08 border-radius-5">
             ☪️Ramadan Emoji List
           </p>
         </div>
+
         <div class="cincodemayo">
           <p class="bg-white w-fit p-05 ml-1 size-08 border-radius-5">
             <small>MX </small>Cinco de Mayo
@@ -116,5 +121,89 @@
         </div>
       </div>
     </main>
+    <footer class="footer flex wrap">
+      <nav>
+        <h5>Vendors & Platforms</h5>
+        <ul>
+          <li><a href="#">Apple</a></li>
+          <li><a href="#">Google Noto Color Emoji</a></li>
+          <li><a href="#">Samsung</a></li>
+          <li><a href="#">Microsoft</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Twitter / X</a></li>
+          <li><a href="#">WhatsApp</a></li>
+          <li><a href="#">JoyPixels</a></li>
+          <li><a href="#">Snapchat</a></li>
+          <li><a href="#">TikTok</a></li>
+          <li><a href="#">All Vendors & Platforms</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <h5>Emojipedia</h5>
+        <ul>
+          <li><a href="#">About Emojipedia</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Emoji Wrap</a></li>
+          <li><a href="#">Emojipedia Shop</a></li>
+          <li><a href="#">Licensing</a></li>
+          <li><a href="#">Meanings</a></li>
+          <li><a href="#">Press Information</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">How To Change Language</a></li>
+          <li><a href="#">AI Art Master</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <h5>Updates & Releases</h5>
+        <ul>
+          <li><a href="#">Latest Approved Emojis</a></li>
+          <li><a href="#">Emoji Kitchen</a></li>
+          <li><a href="#">Latest Draft Emojis</a></li>
+          <li><a href="#">All Emoji Versions</a></li>
+          <li><a href="#">All Unicode Versions</a></li>
+          <li><a href="#">Emoji Proposals / X</a></li>
+          <li><a href="#">Emoji Requests</a></li>
+        </ul>
+      </nav>
+      <nav>
+        <h5>Facts, Figures & Guides</h5>
+        <ul>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Emoji Statistics</a></li>
+          <li><a href="#">Emoji Sequence</a></li>
+          <li><a href="#">Gender Neutral Emojis</a></li>
+          <li><a href="#">Glossary</a></li>
+          <li><a href="#">Tips</a></li>
+          <li><a href="#">Can I Emoji?</a></li>
+        </ul>
+      </nav>
+      <section class="flex">
+        <div class="flex mb-1 gap-05">
+          <img
+            class="zedge-logo"
+            src="./assets/zedge-logo.svg"
+            alt="zedge-logga" />
+          <p class="size-08 line-height-1">
+            Emojipedia is brought to you by Zedge, the world's #1 phone
+            personalization app
+          </p>
+        </div>
+        <div class="flex gap-05 mb-2">
+          <img
+            class="border-radius-5"
+            src="./assets/logo-google-playstore.svg"
+            alt="Google play-logga" />
+          <img
+            class="border-radius-5"
+            src="./assets/logo-appstore.svg"
+            alt="appstore-logga" />
+          <img
+            class="border-radius-5"
+            src="./assets/use-in-browser.svg"
+            alt="browser-logga" />
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
