fixad zedge-loggorna i footer + adderat <li> nav

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           <li><a href="#">Terms of Service</a></li>
           <li><a href="#">How To Change Language</a></li>
           <li><a href="#">AI Art Master</a></li>
+          <li><a class="color-black" href="#">Privacy Preferences</a></li>
         </ul>
       </nav>
       <nav>
@@ -181,6 +182,10 @@
       <section class="flex">
         <div class="flex mb-1 gap-05">
           <img
+            class="zedge-letter-logo"
+            src="./assets/zedge-letter-logo.svg"
+            alt="zedge-logga" />
+          <img
             class="zedge-logo"
             src="./assets/zedge-logo.svg"
             alt="zedge-logga" />
@@ -189,17 +194,17 @@
             personalization app
           </p>
         </div>
-        <div class="flex gap-05 mb-2">
+        <div class="flex gap-05 mb-2 wrap">
           <img
-            class="border-radius-5"
+            class="play-store-logo"
             src="./assets/logo-google-playstore.svg"
             alt="Google play-logga" />
           <img
-            class="border-radius-5"
+            class="play-store-logo"
             src="./assets/logo-appstore.svg"
             alt="appstore-logga" />
           <img
-            class="border-radius-5"
+            class="play-store-logo"
             src="./assets/use-in-browser.svg"
             alt="browser-logga" />
         </div>
