Gjort sökfältet sticky och anpassat margins till emojipedia-bilden samt justerat margins på mobilläget. Ändrat h2 och h3:ors margins

--- a/index.html
+++ b/index.html
@@ -55,12 +55,13 @@
     </div>
 
     <main class="main flex column">
-      <fieldset class="search-desktop">
-        <i class="material-icons">search</i>
-        <input type="text" placeholder="Search Emojipedia" />
-        <span>🎲</span>
-      </fieldset>
-
+      <div class="search-container">
+        <fieldset class="search-desktop">
+          <i class="material-icons">search</i>
+          <input type="text" placeholder="Search Emojipedia" />
+          <span>🎲</span>
+        </fieldset>
+      </div>
       <figure class="emojipedia-container">
         <img
           class="logo-text-img"
