--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet" />
 
     <link rel="stylesheet" href="mobile.css" />
@@ -69,9 +69,9 @@
           alt="logo-text-icon" />
       </figure>
 
-      <div class="flex justify-between">
+      <div class="flex justify-between items-center mb-1">
         <h2>Most Popular</h2>
-        <h3 class="weight-200">Show More</h3>
+        <h3>Show More</h3>
       </div>
       <div class="main-icons">
         <span>❤️</span>
@@ -85,9 +85,9 @@
         <span>🎉</span>
       </div>
 
-      <div class="flex justify-between">
+      <div class="flex justify-between items-center mb-1">
         <h2>Customizable Emoji Products</h2>
-        <h3 class="weight-200">Show More</h3>
+        <h3>Show More</h3>
       </div>
 
       <img
@@ -99,9 +99,9 @@
         src="./assets/banner_desktop.jpeg"
         alt="banner_desktop" />
 
-      <div class="flex justify-between">
-        <h2>Customizable Emoji Products</h2>
-        <h3 class="weight-200">Show More</h3>
+      <div class="flex justify-between items-center mb-1">
+        <h2>Upcoming Events</h2>
+        <h3>Show More</h3>
       </div>
 
       <div class="box-container mb-2">
@@ -123,6 +123,7 @@
           </p>
         </div>
       </div>
+      <div class="empty-div"></div>
     </main>
     <footer class="footer flex wrap">
       <nav>
