Gjort rörelsen mer lik på banner-mobile img

--- a/index.html
+++ b/index.html
@@ -89,13 +89,14 @@
         <h2>Customizable Emoji Products</h2>
         <h3>Show More</h3>
       </div>
-
+      <figure class="flex justify-center mb-2">
+        <img
+          class="banner-mobile"
+          src="./assets/banner_mobile.webp"
+          alt="banner_mobile" />
+      </figure>
       <img
-        class="banner-mobile border-radius-5 mb-2"
-        src="./assets/banner_mobile.webp"
-        alt="banner_mobile" />
-      <img
-        class="banner-desktop border-radius-5 mb-2"
+        class="banner-desktop mb-2"
         src="./assets/banner_desktop.jpeg"
         alt="banner_desktop" />
 
