Lagt till latest News Cards

--- a/index.html
+++ b/index.html
@@ -124,6 +124,53 @@
           </p>
         </div>
       </div>
+      <div class="flex justify-between items-center mb-1">
+        <h2>Latest News</h2>
+        <h3>Show More</h3>
+      </div>
+      <div class="card-container mb-2">
+        <div class="card">
+          <div class="card-header">
+            <img src="./assets/iOS-Apple-Emoji-header.jpeg" />
+          </div>
+          <div class="card-content">
+            <h3>iOS 17.4 Emoji Changelog</h3>
+            <p>
+              Today Apple has released its latest emoji update, introducing 118
+              new emojis including a phoenix, a lime, several gender-neutral
+              family designs, and various direction-specific people emojis.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="./assets/Emoji-header-blue.jpeg" />
+          </div>
+          <div class="card-content">
+            <h3>First Look: New Emojis in iOS 17.4</h3>
+            <p>
+              New emojis have arrived on iOS as part of the first iOS 17.4 beta.
+              The new additions include a phoenix, a lime, smileys shaking their
+              heads up and down, and a series of direction-specifying people
+              emojis.
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <img src="./assets/Emoji-header-green.jpeg" />
+          </div>
+          <div class="card-content">
+            <h3>Google's Emoji 15.1 Support In Noto Color Emoji</h3>
+            <p>
+              Today Google has officially unveiled its full-color designs for
+              Unicode's latest approved emojis, which include a phoenix, a lime,
+              smileys shaking their heads up and down, and a series of
+              direction-specifying people emojis.
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="empty-div"></div>
     </main>
     <footer class="footer flex wrap">
