--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet" />
 
+    <link rel="icon" href="./assets/logo-icon.webp" sizes="16x16" />
+
     <link rel="stylesheet" href="mobile.css" />
     <link rel="stylesheet" href="desktop.css" />
-    <title>Emojipedia😍</title>
+    <title>📕Emojipedia - 😀 Home of Emoji Meanings 🙆 ⭐ 🌱 😍</title>
   </head>
   <body>
     <div class="header-mobile">
